# Cinderella

./: .SourceSageignore  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README-MUGEN.md  README.md  README_JA.md  RELEASE_NOTES.md  agentic-vision-gemini.skill  docker-compose-mugen.yml  docker-compose.yml  pyproject.toml  requirements.txt  server.py  setup-mugen.sh
browser-api/: server.py
cc-api/: Dockerfile  entrypoint.sh  server.py
cc-api/tests/: README.md  test_all.py  test_api.py  test_discord_api.py  test_gemini_vision.py  test_message_handlers.py
data/.claude/: CLAUDE.md
data/.claude/skills/agentic-vision-gemini/: README.md  README_JA.md  SKILL.md
data/.claude/skills/agentic-vision-gemini/references/: api_reference.md  use_cases.md
data/.claude/skills/agentic-vision-gemini/scripts/: agentic_vision.py  batch_analyze.py  image_utils.py
data/.claude/skills/discord/: SKILL.md
discord-bot/: DEBATE_FEATURE.md  Dockerfile  bot.py  debate_handler.py  requirements.txt
discord-bot/handlers/: __init__.py  channel_handlers.py  guild_handlers.py  message_handlers.py
discord-bot/tests/: README.md  test_channel_handlers.py  test_debate_handler.py  test_guild_handlers.py  test_mention.py  test_message_handlers.py
tests/: README.md  test_api.py
